tests/errors/functions2.pa
program gcd(output);
var a, b: integer;
	abc: real;
	c : boolean;

function asd(var a1: boolean; as: integer): integer;
	begin
		a1 := asd = 1;
	end;

function aSd2(a1: boolean; o: integer): real; FORWARD;

function Asd2;
	begin
	end;

function osd(a: integer): real;
	begin
a := asd(c, 1);
	end;

begin
end.
